--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
-    <div
-      id="cover"
-      class="container-fluid in cover invisible z-3 position-absolute d-flex animate__animated text-center justify-content-center"
-    >
+    <div id="cover" class="container-fluid in cover invisible z-3 position-absolute d-flex animate__animated text-center justify-content-center">
       <div class="row animate__animated">
         <div class="col-12 align-items-start">
           <h1 class="male animate__animated">Rian</h1>
@@ -59,64 +56,9 @@
         </div>
       </div>
     </div>
-    <section
-      id="prolog"
-      class="prolog text-center d-flex justify-content-center align-items-end"
-    >
-      <main>
-        <p class="prolog-content p1" style="text-transform: uppercase">
-          the wedding of
-        </p>
-        <h2 class="prolog-content p2" style="text-transform: uppercase">
-          rian & veti
-        </h2>
-        <p class="prolog-content p3" style="border: 1px black">22.10.2023</p>
-        <img src="img/element/Element-1-resize.png" alt="" />
-      </main>
-    </section>
-
-    <section id="home" class="home container-fluid position-relative d-flex justify-content-center text-center">
-      <div class="row d-flex position-absolute justify-content-between">
-        <p>-----Mempelai-----</p>
-        <div class="col-lg-6>
-          <div class="row">
-            <div class="col-md-4 align-items-start">
-              <div class="card" style="width: 16rem">
-                <img src="..." class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <img src="img/element/element-9.png" alt="" />
-            </div>
-            <div class="col-md-4 align-items-end">
-              <div class="card" style="width: 16rem">
-                <img src="..." class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Card titles</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- <section id="story" class="story text-center d-flex justify-content-center align-items-start">
-        <h1>  a</h1>
-
-    </section> -->
+   <section id="prolog" class="prolog">
+    
+   </section>
 
     <!-- COVER -->
     <script>
