--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         </div>
       </div>
     </div>
-   <section id="prolog" class="prolog">
-    
+   <section id="prolog">
+    <div class="container-fluid prolog">
+      
+    </div>
    </section>
 
     <!-- COVER -->
