--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </div>
       </div>
     </div>
-   <section id="prolog">
-    <div class="container-fluid prolog">
+   <section id="prolog" class="prolog">
+    <div class="container-fluid">
       
     </div>
    </section>
