--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </div>
     </div>
    <section id="prolog" class="prolog">
+    <img src="/img/background/bg-2-2.jpg" alt="" class="img-fluid">
     <div class="container-fluid">
     </div>
    </section>
