--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
-    <div id="cover" class="container-fluid in cover invisible z-3 position-absolute d-flex animate__animated text-center justify-content-center">
+    <div id="cover" class="container-fluid in cover z-3 position-absolute d-flex animate__animated text-center justify-content-center">
       <div class="row animate__animated">
         <div class="col-12 align-items-start">
           <h1 class="male animate__animated">Rian</h1>
