--- a/index.html
+++ b/index.html
@@ -34,34 +34,9 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
-    <div id="cover" class="container-fluid in cover z-3 position-absolute d-flex animate__animated text-center justify-content-center">
-      <div class="row animate__animated">
-        <div class="col-12 align-items-start">
-          <h1 class="male animate__animated">Rian</h1>
-          <h1 class="span animate__animated">&</h1>
-          <h1 class="female animate__animated">Veti</h1>
-        </div>
-        <div class="col cover-text">
-          <p>Yth, Bapak/Ibu/Saudara/i</p>
-          <h3>
-            Dengan rasa hormat, kami mengundang anda untuk menghadiri pernikahan
-            kami.
-          </h3>
-          <button
-            class="cover-button btn btn-outline-dark"
-            onclick="enableScroll()"
-          >
-            Buka Undangan
-          </button>
-        </div>
-      </div>
+    <div class="container-fluid bg-danger" style="height: 100vh; width: auto;">
+      <h1>a</h1>
     </div>
-   <section id="prolog" class="prolog">
-    <img src="/img/background/bg-2-2.jpg" alt="" class="img-fluid">
-    <div class="container-fluid">
-    </div>
-   </section>
-
     <!-- COVER -->
     <script>
       const coverAction = document.querySelector(".cover");
