--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
-    <div class="container-fluid bg-danger" style="height: 100vh; width: auto;">
+    <div class="container-fluid cover bg-danger" style="height: 100vh; width: auto;">
+      <img src="img/background/bg-2-2.jpg" alt="">
       <h1>a</h1>
     </div>
     <!-- COVER -->
