--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="container-fluid cover bg-danger" style="height: 100vh; width: auto;">
-      <img src="img/background/bg-2.jpg" alt="">
+      <img src="img/background/bg-2.jpg" alt="" class ="img-fluid">
       <h1>a</h1>
     </div>
     <!-- COVER -->
