--- a/index.html
+++ b/index.html
@@ -34,6 +34,36 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
+    <section id="cover" class="cover z-1 position-absolute d-flex align-items-center">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <img src="img/element/Element-1-resize.png" alt="">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col "><h1>Rian</h1></div>
+        </div>
+        <div class="row">
+          <div class="col"><p>&</p></div>
+        </div>
+        <div class="row">
+          <div class="col"><h1>Vety</h1></div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <button class="cover-button" style="background-color: rgba(0, 0, 0, 0); border: 0;"><img src="img/element/element-3.png" alt="" style="margin-bottom: 0; padding-bottom: 0;"></button>
+          </div>
+          <p class="cover-ttl">22-10-2023</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="content" class="content">
+      <div class="container">
+        
+      </div> 
+    </section>
     <!-- COVER -->
     <script>
       const coverAction = document.querySelector(".cover");
@@ -58,15 +88,15 @@
       }
 
       coverButton.addEventListener("click", function () {
-        document.querySelector(".male").classList.add("animate__fadeOutLeft");
-        document.querySelector(".span").classList.add("animate__fadeOut");
-        document
-          .querySelector(".female")
-          .classList.add("animate__fadeOutRight");
-        setTimeout(() => {
-          rowAnimation.classList.add("animate__fadeOutDown");
-          coverAction.classList.add("animate__fadeOutUp");
-        }, 450);
+        // document.querySelector(".male").classList.add("animate__fadeOutLeft");
+        // document.querySelector(".span").classList.add("animate__fadeOut");
+        // document
+        //   .querySelector(".female")
+        //   .classList.add("animate__fadeOutRight");
+        // setTimeout(() => {
+        //   rowAnimation.classList.add("animate__fadeOutDown");
+        //   coverAction.classList.add("animate__fadeOutUp");
+        // }, 450);
         setTimeout(() => {
           coverAction.classList.add("invisible");
           document.body.style.overflowY = "scroll";
