--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         }, 2000);
       });
 
-      // disableScroll();
+      disableScroll();
       // if(localStorage.getItem('opened')) {
       //         coverAction.classList.add("invisible");
       //     }
