--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
     <!-- End Simply Coundown -->
   </head>
   <body>
-    <section id="cover" class="cover z-1 position-absolute d-flex align-items-center">
+    <section
+      id="cover"
+      class="invisible cover z-1 position-absolute d-flex align-items-center"
+    >
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <img src="img/element/Element-1-resize.png" alt="">
+            <img src="img/element/Element-1-resize.png" alt="" />
           </div>
         </div>
         <div class="row">
-          <div class="col "><h1>Rian</h1></div>
+          <div class="col"><h1>Rian</h1></div>
         </div>
         <div class="row">
           <div class="col"><p>&</p></div>
@@ -52,38 +55,172 @@
         </div>
         <div class="row">
           <div class="col">
-            <button class="cover-button" style="background-color: rgba(0, 0, 0, 0); border: 0;"><img src="img/element/element-3.png" alt="" style="margin-bottom: 0; padding-bottom: 0;"></button>
+            <button
+              class="cover-button"
+              style="background-color: rgba(0, 0, 0, 0); border: 0"
+            >
+              <img
+                src="img/element/element-3.png"
+                alt=""
+                style="margin-bottom: 0; padding-bottom: 0"
+              />
+            </button>
           </div>
           <p class="cover-ttl">22-10-2023</p>
         </div>
       </div>
     </section>
 
-    
+    <section id="first" class="first d-flex align-items-center">
+      <div class="container text-center center">
+        <div class="row">
+          <div class="col">
+            <img
+              src="/img/photos/element-photo-new.png"
+              alt=""
+              style="width: 35%"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h1 class="male-first">Rian Satria Agung Saputra</h1>
+            <p>&</p>
+            <h1 class="female-first">Vety Marcella</h1>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <section id="content" class="content">
+    <section id="main" class="main">
       <nav class="navbar sticky-top bg-body-tertiary">
-        <div class="container-fluid justify-content-center">
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img
+              src="/docs/5.3/assets/brand/bootstrap-logo.svg"
+              alt="Bootstrap"
+              width="30"
+              height="24"
+            />
+          </a>
         </div>
       </nav>
       <div class="container">
-        
-      </div> 
+        <div class="row justify-content-center mt-5 mb-5">
+          <div class="col-md-8 text-center">
+            <h2 class="ht-1">Mempelai</h2>
+          </div>
+        </div>
+
+        <div class="row couple">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-4">
+                <img
+                  src="img/element/Man.png"
+                  alt="Rian"
+                  class="img-responsive rounded-circle"
+                  style="border: 1px solid gold"
+                />
+              </div>
+              <div class="col-8 ht-5">
+                <h4>Rian Satria Agung Saputra</h4>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum error dolore ducimus odio suscipit officia.</p> -->
+                <p class="text-organ">
+                  Putra dari Alm. Bpk. 1 <br />
+                  & <br />
+                  Ibu. 2
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-8 text-end">
+                <h4 class="ht-2 p-man">Vety Marsella</h4>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum error dolore ducimus odio suscipit officia.</p> -->
+                <p class="p-man text-organ">
+                  Putri dari Bpk. 2 <br />
+                  & <br />
+                  Ibu. 1
+                </p>
+              </div>
+              <div class="col-4">
+                <img
+                  src="img/element/Woman.png"
+                  alt="Vety"
+                  class="img-responsive rounded-circle"
+                  style="border: 1px solid gold; white-space: nowrap"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <section id="info" class="info">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>informasi acara</h2>
+            <div class="simply-countdown"></div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+          <div class="col-10">
+            <div class="card text-center text-bg-light mb-3">
+              <div class="card-header textHeader-1">Akad Nikah</div>
+              <div class="card-body">
+                <div class="row justify-content-center align-items-center">
+                  <div class="col-md-6 mt-1">
+                    <i class="bi bi-clock d-block icon-1"></i>
+                    <p class="detail">Ba'da Magrib - Selesai</p>
+                  </div>
+                  <div class="col-md-6 mt-1">
+                    <i class="bi bi-calendar-check d-block icon-1"></i>
+                    <p class="detail">Jum'at, 22 Oktober 2023</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer foot-detail">
+                *Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
+                dan kekhusyuan seluruh prosesi acara.
+              </div>
+            </div>
+          </div>
+          <div class="col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header textHeader-1">
+                Resepsi
+              </div>
+              <div class="card-body">
+                <div class="row justify-content-center align-items-center">
+                  <div class="col-md-6 mt-1">
+                    <i class="bi bi-clock d-block icon-1"></i>
+                    <p class="detail">11.00 WIB - Selesai</p>
+                  </div>
+                  <div class="col-md-6 mt-1">
+                    <i class="bi bi-calendar-check d-block icon-1"></i>
+                    <p class="detail">Kamis, 28 September 2023</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer foot-detail">
+                *Saat acara Resepsi diharapkan untuk kondusif menjaga ketertiban dan keamanan saat seluruh prosesi acara.
+              </div>
+            </div>
+          </div>
+        </div>
+        <p class="description">
+          "diharapkan untuk tidak salah tanggal apalagi alamat, jikalau tiba
+          di tujuan namun tidak ada tanda tanda sedang dilangsungkan
+          pernikahan, boleh jadi anda salah tanggal atau salah alamat."
+        </p>
+      </div>
+    </section>
+
     <!-- COVER -->
     <script>
       const coverAction = document.querySelector(".cover");
@@ -125,7 +262,7 @@
         }, 2000);
       });
 
-      disableScroll();
+      // disableScroll();
       // if(localStorage.getItem('opened')) {
       //         coverAction.classList.add("invisible");
       //     }
