--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <section
       id="cover"
-      class="invisible cover z-1 position-absolute d-flex align-items-center"
+      class="cover z-1 position-absolute d-flex align-items-center"
     >
       <div class="container text-center">
         <div class="row">
@@ -262,7 +262,7 @@
         }, 2000);
       });
 
-      // disableScroll();
+      disableScroll();
       // if(localStorage.getItem('opened')) {
       //         coverAction.classList.add("invisible");
       //     }
