--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         // }, 450);
         setTimeout(() => {
           coverAction.classList.add("invisible");
+          document.body.style.overflowY = "scroll";
           document.querySelector(".navbar").classList.remove("invisible");
         }, 2000);
       });
