--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 src="img/element/element-3.png"
                 alt=""
                 style="margin-bottom: 0; padding-bottom: 0"
+                onclick="enableScroll()"
               />
             </button>
           </div>
