--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <nav id="navbar-example2" class="navbar sticky-top" data-aos="fade-left">
-      <div class="col-auto" style="padding-left: 50px; padding-right: 30px;">
+      <div class="col-auto anto" style="padding-left: 50px; padding-right: 30px;">
         <a class="navbar-brand" href="#" style="font-family: dancing script;">Rian & Peti</a>
       </div>
       <div class="col flex-fill nav-items">
@@ -141,7 +141,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-auto" style="padding-right: 50px">
+      <div class="col-auto mygreat" style="padding-right: 50px">
         <ul class="nav nav-pills">
           <li class="nav-item">
             <button onclick="iconChange()" id="myPlayer" class="nav-link myPlayer">
